# Nyx-Chess-Engine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml  release.yml
src/: bitboard.cpp  bitboard.h  board.cpp  board.h  book.cpp  book.h  eval.cpp  eval.h  main.cpp  movegen.cpp  movegen.h  nnue.cpp  nnue.h  search.cpp  search.h  see.cpp  see.h  types.h  uci.cpp  uci.h  utils.cpp  utils.h
tools/: gen_data.cpp  gen_nnue.cpp  train_nnue.py
